# lox-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
ast/: Cargo.toml
ast/src/: ast.rs  env.rs  lib.rs
bench_helper/: Cargo.toml
bench_helper/src/: command.rs  lib.rs  macros.rs
benches/: Cargo.toml
benches/benches/: binary_trees.rs  equality.rs  fib.rs  instantiation.rs  invocation.rs  loop.rs  method_call.rs  properties.rs  string_equality.rs  trees.rs  zoo.rs
benches/src/: lib.rs
data/assignment/: associativity.lox  global.lox  local.lox  syntax.lox
data/benchmark/: fib.lox
data/block/: empty.lox  scope.lox
data/class/: inherited_method.lox
data/closure/: assign_to_closure.lox  assign_to_shadowed_later.lox  close_over_function_parameter.lox  close_over_later_variable.lox  close_over_method_parameter.lox  closed_closure_in_function.lox  nested_closure.lox  open_closure_in_function.lox  reference_closure_multiple_times.lox  reuse_closure_slot.lox  shadow_closure_with_local.lox  unused_closure.lox  unused_later_closure.lox
data/comments/: block_comment.lox  line_at_eof.lox  unicode.lox
data/constructor/: arguments.lox  call_init_early_return.lox  call_init_explicitly.lox  default.lox  early_return.lox  init_not_method.lox  return_in_nested_function.lox
data/expressions/: evaluate.lox
data/field/: call_function_field.lox  get_and_set_method.lox  many.lox  method.lox  method_binds_this.lox  on_instance.lox
data/for/: return_closure.lox  return_inside.lox  scope.lox  syntax.lox
data/function/: mutual_recursion.lox  nested_call_with_arguments.lox
data/if/: dangling_else.lox  else.lox  if.lox  truth.lox
data/inheritance/: constructor.lox  inherit_methods.lox  set_fields_from_base_class.lox
data/logical_operator/: and_truth.lox  or_truth.lox
data/method/: arity.lox
data/number/: nan_equality.lox
data/operator/: add.lox
data/return/: after_else.lox  after_if.lox  after_while.lox  in_function.lox  in_method.lox
data/string/: literals.lox
data/super/: bound_method.lox  call_other_method.lox  call_same_method.lox  closure.lox  constructor.lox  extra_arguments.lox  indirectly_inherited.lox  reassign_superclass.lox  super_at_top_level.lox  super_in_closure_in_inherited_method.lox  super_in_inherited_method.lox  this_in_superclass_method.lox
data/this/: closure.lox  nested_class.lox  nested_closure.lox  this_in_method.lox
data/variable/: collide_with_parameter.lox  early_bound.lox  in_middle_of_block.lox  in_nested_block.lox  local_from_method.lox  redeclare_global.lox  redefine_global.lox  scope_reuse_in_different_blocks.lox  shadow_and_local.lox  shadow_global.lox  shadow_local.lox  uninitialized.lox  unreached_undefined.lox  use_global_in_initializer.lox
data/while/: return_closure.lox  return_inside.lox
interpreter/: Cargo.toml
interpreter/benches/: constants.rs  instantiation.rs
interpreter/src/: callable.rs  evaluator.rs  interpreter.rs  lib.rs  main.rs  resolver.rs
interpreter/tests/: tests.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  span.rs  token.rs
parser/: Cargo.toml
parser/src/: lib.rs  parser.rs
src/: ast.rs  callable.rs  env.rs  evaluator.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  resolver.rs  stmt.rs  token.rs
tests/: Cargo.toml  integration_tests.rs
tests/src/: intergration_tests.rs  lib.rs
