[package]
name = "jlox-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
peekmore = "1.0"
lazy_static = "1.4.0"
rustyline = "9.0.0"
uuid = {version = "0.8.2", features = ["v4"]}

[dev-dependencies]
regex = "1.5.4"
simple_test_case = { git = "https://github.com/sminez/simple_test_case.git" }
once_cell = "1.9.0"

[[test]]
name="integration_tests"

[profile.release]
codegen-units = 1
lto = "on"

