[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
lox-interpreter = { path = "../interpreter", artifact = "bin" }
criterion = "0.3"
bench_helper = { path = "../bench_helper" }
paste = "1.0.6"

[[bench]]
name = "instantiation"
harness = false

[[bench]]
name = "loop"
harness = false

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "properties"
harness = false

[lib]
doctest = false

