[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
lox-interpreter = { path = "../interpreter", artifact = "bin" }
criterion = "0.3"
bench_helper = { path = "../bench_helper" }
paste = "1.0.6"

[[bench]]
name = "binary_trees"
harness = false 

[[bench]]
name = "equality"
harness = false 

[[bench]]
name = "instantiation"
harness = false

[[bench]]
name = "invocation"
harness = false

[[bench]]
name = "loop"
harness = false

[[bench]]
name = "method_call"
harness = false

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "properties"
harness = false

[[bench]]
name = "string_equality"
harness = false

[[bench]]
name = "trees"
harness = false

[[bench]]
name = "zoo"
harness = false

[lib]
doctest = false
bench = false

