[package]
name = "lox-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rustyline = "9.0.0"
lox-lexer = { path = "../lexer"}
lox-ast = { path = "../ast" }
lox-parser = { path = "../parser" }

[dev-dependencies]
regex = "1.5.4"
simple_test_case = { git = "https://github.com/sminez/simple_test_case.git" }
once_cell = "1.9.0"
criterion = "0.3"
bench_helper = { path = "../bench_helper" }

[[test]]
name = "integration"
path = "tests/tests.rs"

[[bench]]
name = "loop"
harness = false

[[bench]]
name = "instantiation"
harness = false

[[bin]]
name="interpreter_main"
path = "src/main.rs"

[lib]
doctest = false


