[package]
name = "lox-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rustyline = "9.0.0"
lox-lexer = { path = "../lexer"}
lox-ast = { path = "../ast" }
lox-parser = { path = "../parser" }

[[bin]]
name="interpreter_main"
path = "src/main.rs"

[lib]
doctest = false


