[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
regex = "1.5.4"
simple_test_case = { git = "https://github.com/sminez/simple_test_case.git" }
once_cell = "1.9.0"
lox-interpreter = { path = "../interpreter", artifact = "bin" }

[[test]]
name = "integration"
path = "src/intergration_tests.rs"

